fix: improve quotes layout on mobile

--- a/src/assets/css/about.scss
+++ b/src/assets/css/about.scss
@@ -326,16 +326,6 @@
       font-size: 20px;
       font-family: variables.$ap;
     }
-
-    .quotes {
-      margin: 92px 0 300px;
-    }
-
-    .quotes-wrapper {
-      width: 85%;
-      padding: 104px 0 104px 52px;
-      background-color: variables.$pink;
-    }
   }
 
   @media all and (max-width: variables.$mobile-max-bp) {
@@ -377,7 +367,7 @@
       }
     }
 
-    .staff-member-spotlight { 
+    .staff-member-spotlight {
       .video-container {
         .close {
           top: 24px;
@@ -390,22 +380,22 @@
         height: 100%;
         background-color: variables.$black;
         position: relative;
-  
+
         .photo-container {
           display: none;
         }
-  
+
         .text-container {
           padding-top: 0;
           width: 100%;
         }
-  
+
         .close {
           position: absolute;
           top: 24px;
           right: 24px;
         }
-  
+
         .text {
           padding: 24px;
           font-family: variables.$ap;
@@ -414,18 +404,17 @@
           h3 {
             margin-bottom: 8px;
           }
-    
+
           h5 {
             margin-bottom: 24px;
           }
-    
+
           p {
             font-size: 17px;
             line-height: 28px;
             margin-bottom: 18px;
           }
         }
-  
       }
     }
 
